# 0-shell

./: .gitignore  Cargo.toml  README.md  README1.md  command.go  go.mod  main.go  readme.md  run_build  run_start  student-script.sh  utils.go
shell/src/: prompt.rs
src/: lib.rs  main.rs
src/commands/: cat.rs  cd.rs  clear.rs  cp.rs  date.rs  echo.rs  help.rs  ls.rs  mkdir.rs  mv.rs  pwd.rs  rm.rs  touch.rs  uname.rs  ver.rs  whoami.rs
src/helpers/: auto_complete.rs  error.rs  execute.rs  history.rs  parse.rs  prompt.rs  redirect.rs
src/scripts/: for_in.rs  gsh.rs  if_else.rs  interpreter.rs
