[package]
name = "gritlab-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
libc = "0.2.153"
chrono = "0.4.34"
users = "0.11.0"
rustyline = "13.0.0"
dirs = "5.0.1"
xattr = "1.3.1"
term_size = "0.3.2"
exacl = "0.12.0"
